# modvislite

./: .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  Dockerfile  db.sqlite3  manage.py  requirements.txt
app/project_modvislite/: asgi.py  settings.py  urls.py  wsgi.py
app/scrapers/: mapper.py  nested_scrape.py  simple.py
app/tutorials/: apps.py  models.py  serializers.py  urls.py  views.py
app/tutorials/templates/tutorials/: base.html  index.html  tutorial_list.html
app/users/: urls.py  views.py
app/users/templates/users/: login.html  logout.html  register.html
data/misc/: django_init.sql
frontend/: streamlit_app.py
