[tool.poetry]
name = "modvislite"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
