[tool.poetry]
name = "modvislite"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = ">=0.2.2"
asgiref = ">=3.6.0"
django = ">=4.1.7"
djangorestframework = ">=3.14.0"
gunicorn = ">=20.1.0"
psycopg2-binary = ">=2.9.5"
python-decouple = ">=3.8"
pytz = ">=2022.7.1"
pre-commit = ">=3.6.2"
streamlit = ">=1.1.1"
sqlparse = ">=0.4.3"
tzdata = ">=2022.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
